--- a/lapzone/cart/templates/cart/detail.html
+++ b/lapzone/cart/templates/cart/detail.html
@@ -15,88 +15,7 @@
 
 <div class="row px-3 mb-5">
     <div class="panel-bg-color col-12 p-3">
-        <div class="white-space-nowrap overflow-auto">
-            <table class="table">
-                <thead>
-                    <tr
-                        class="d-flex justify-content-between align-items-center border-1 border-bottom"
-                    >
-                        <th class="me-4">Image</th>
-                        <th>Product</th>
-                        <th>Unit price</th>
-                        <th>Quantity</th>
-                        <th>Price</th>
-                        <th>Remove</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for item_dict in cart %}
-                    {% with product_url=item_dict.product.get_absolute_url %}
-                    <tr
-                        class="d-flex justify-content-between align-items-center border-1 border-bottom py-2"
-                    >
-                        <!-- Product image -->
-                        <td class="image-td me-4">
-                            <a href="{{ product_url }}" class="opacity-1">
-                                <img
-                                    class="img-fluid w-100"
-                                    alt="{{ item_dict.product.name }} image"
-                                    src="{{ item_dict.product.image.url }}"
-                                />
-                            </a>
-                        </td>
-                        <!-- Product name -->
-                        <td>
-                            <a href="{{ product_url }}" class="fs-5 white-space-normal">
-                                {{ item_dict.product.name }}
-                            </a>
-                        </td>
-                        <!-- Product unit price -->
-                        <td 
-                            class="unit_price fs-4"
-                            id="unit_price_{{ forloop.counter }}"
-                        >
-                            {{ item_dict.price }}$
-                        </td>
-                        <!-- Quantity number input -->
-                        <td>
-                            <input 
-                                min="1" 
-                                max="10" 
-                                type="number"
-                                name="quantity" 
-                                value="{{ item_dict.quantity }}"
-                                id="quantity_field_{{ forloop.counter }}"
-                                data-product_id="{{ item_dict.product.id }}"
-                                class="form-control text-center fs-5 me-auto ms-auto"
-                            >
-                        </td>
-                        <!-- Product total price -->
-                        <td 
-                            class="fs-4"
-                            id="total_price_{{ forloop.counter }}"
-                        >
-                            {{ item_dict.total_price }}$
-                        </td>
-                        <!-- "Remove" button -->
-                        <td>
-                            <button 
-                                title="Remove"
-                                data-product_id="{{ item_dict.product.id }}"
-                                class="remove btn fs-6 border-0 panel-bg-color"
-                            >
-                                <ion-icon 
-                                    name="trash" 
-                                    style="color: red;"
-                                ></ion-icon>
-                            </button>
-                        </td>
-                    </tr>
-                    {% endwith %}
-                    {% endfor %}
-                </tbody>
-            </table>
-        </div>
+        {% include 'cart/utils/_product_table.html' with collection=cart app="cart" only %}
 
         <div class="d-flex justify-content-between fs-4 mt-3">
             <b>Total price: </b>
