--- a/lapzone/order/templates/order/order_detail.html
+++ b/lapzone/order/templates/order/order_detail.html
@@ -26,59 +26,7 @@
             <b class="mb-4">Order items</b>
         </div>
 
-        <div class="white-space-nowrap overflow-auto">
-            <table class="table">
-                <thead>
-                    <tr
-                        class="d-flex justify-content-between align-items-center border-1 border-bottom border-top"
-                    >
-                        <th class="me-4">Image</th>
-                        <th>Product</th>
-                        <th>Unit price</th>
-                        <th>Quantity</th>
-                        <th>Price</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for order_item in order.orderitem_set.all %}
-                    {% with product_url=order_item.product.get_absolute_url %}
-                    <tr
-                        class="d-flex justify-content-between align-items-center border-1 border-bottom py-2"
-                    >
-                        <!-- Product image -->
-                        <td class="image-td me-4">
-                            <a href="{{ product_url }}" class="opacity-1">
-                                <img
-                                    class="img-fluid w-100"
-                                    alt="{{ order_item.product.name }} image"
-                                    src="{{ order_item.product.image.url }}"
-                                />
-                            </a>
-                        </td>
-                        <!-- Product name -->
-                        <td>
-                            <a href="{{ product_url }}" class="fs-5 white-space-normal">
-                                {{ order_item.product.name }}
-                            </a>
-                        </td>
-                        <!-- Order item unit price -->
-                        <td class="fs-4">
-                            {{ order_item.price }}$
-                        </td>
-                        <!-- Order item quantity -->
-                        <td class="fs-3">
-                            {{ order_item.quantity }}
-                        </td>
-                        <!-- Order item total price -->
-                        <td class="fs-4">
-                            {% widthratio order_item.price 1 order_item.quantity %}.0$
-                        </td>
-                    </tr>
-                    {% endwith %}
-                    {% endfor %}
-                </tbody>
-            </table>
-        </div>
+        {% include 'cart/utils/_product_table.html' with collection=order.orderitem_set.all app="order" only %}
 
         <div 
             class="d-flex justify-content-between align-items-center fs-4 mt-3"
