--- a/lapzone/templates/_base.html
+++ b/lapzone/templates/_base.html
@@ -35,9 +35,8 @@
 
 		<title>{% block title %}{% endblock %} | LapZone</title>
 
-        <!-- Site icon and favicon -->
+        <!-- Site icon -->
 		<link rel="icon" type="image/x-icon" href="{% static 'images/logo.ico' %}" />
-        <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}">
 
 		<!-- Bootstrap5 CSS -->
 		<link
