--- a/lapzone/shop/templates/shop/product_list.html
+++ b/lapzone/shop/templates/shop/product_list.html
@@ -127,7 +127,7 @@
             {% for product in page_obj %}
             <div class="col-lg-4 col-md-6 col-sm-12 d-flex align-items-stretch">
                 <div class="product w-100 d-flex flex-column justify-content-between rounded mb-3">
-                    {% include 'shop/utils/_product_card.html' with product=product %}
+                    {% include 'shop/utils/_product_card.html' with product=product liked_products=liked_products user=user cart=cart.cart only %}
                 </div>
             </div>
             {% empty %}
