PERF: Add the 'only' kw for including the _product_card.html
in the customer/wish_list.html (forgot)

--- a/lapzone/customer/templates/customer/wish_list.html
+++ b/lapzone/customer/templates/customer/wish_list.html
@@ -21,7 +21,7 @@
                 <div 
                     class="product w-100 d-flex flex-column justify-content-between rounded mb-3"
                 >
-                    {% include 'shop/utils/_product_card.html' with product=like.product %}
+                    {% include 'shop/utils/_product_card.html' with product=like.product user=user cart=cart.cart only %}
                 </div>
             </div>
             {% endfor %}
