STYLE: Change css class for the carousel images in the shop/home.html

--- a/lapzone/shop/templates/shop/home.html
+++ b/lapzone/shop/templates/shop/home.html
@@ -36,7 +36,7 @@
                         class="opacity-1"
                         href="{{ image.product.get_absolute_url }}"
                     >
-                        <img class="d-block mx-auto" src="{{ image.image.url }}" />
+                        <img class="w-100" src="{{ image.image.url }}" />
                     </a>
 				</div>
 				{% endfor %}
