--- a/lapzone/templates/account/password_change.html
+++ b/lapzone/templates/account/password_change.html
@@ -1,25 +1,29 @@
 {% extends "account/base.html" %}
 
 {% block title %}Change Password{% endblock %} 
-{% block content_title %}Change Password{% endblock %} 
+{% block content_title %}Change Password{% endblock %}
 
 
 {% block content %}
-<div class="row px-3 mb-5">
-    <div class="panel-bg-color col-12 p-3">
-        <form method="POST" action="">
-            {% csrf_token %}
+<div class="row px-3 mb-5 d-flex justify-content-between">
+    {% include "customer/utils/_link_list_group.html" with page="password" user=user only %}
 
-            {{ form.as_p }}
+    <div class="col-lg-9 col-md-12 px-0">
+        <div id="content" class="panel-bg-color p-3 rounded">
+            <form method="POST" action="">
+                {% csrf_token %}
 
-            <button 
-                type="submit" 
-                name="action"
-                class="btn btn-success btn-lg mt-3"
-            >
-                Change Password
-            </button>
-        </form>
+                {{ form.as_p }}
+
+                <button
+                    type="submit"
+                    name="action"
+                    class="btn btn-success btn-lg mt-3"
+                >
+                    Change Password
+                </button>
+            </form>
+        </div>
     </div>
 </div>
 {% endblock content %}
