--- a/lapzone/templates/account/email.html
+++ b/lapzone/templates/account/email.html
@@ -6,84 +6,88 @@
 
 
 {% block content %}
-<div class="row px-3 mb-5">
-    <div class="panel-bg-color col-12 p-3">
-    {% if user.emailaddress_set.all %}
-        <p>The following e-mail addresses are associated with your account:</p>
+<div class="row px-3 mb-5 d-flex justify-content-between">
+    {% include "customer/utils/_link_list_group.html" with page="emails" user=user only %}
 
-        <form action="" method="post">
-            {% csrf_token %}
+    <div class="col-lg-9 col-md-12 px-0">
+        <div id="content" class="panel-bg-color p-3 rounded">
+        {% if user.emailaddress_set.all %}
+            <p>The following e-mail addresses are associated with your account:</p>
 
-            <fieldset>
-            {% for emailaddress in user.emailaddress_set.all %}
-                <div class="mb-3">
-                    <label 
-                        for="email_radio_{{forloop.counter}}"
-                    >
-                        <input 
-                            type="radio" 
-                            name="email" 
-                            value="{{emailaddress.email}}"
-                            id="email_radio_{{forloop.counter}}" 
-                            {% if emailaddress.primary or user.emailaddress_set.count == 1 %}checked="checked"{% endif %} 
-                        />
+            <form action="" method="post">
+                {% csrf_token %}
 
-                        {{ emailaddress.email }} - 
-                        {% if emailaddress.verified %}Verified{% else %}Unverified{% endif %}
+                <fieldset>
+                {% for emailaddress in user.emailaddress_set.all %}
+                    <div class="mb-3">
+                        <label
+                            for="email_radio_{{forloop.counter}}"
+                        >
+                            <input
+                                type="radio"
+                                name="email"
+                                value="{{emailaddress.email}}"
+                                id="email_radio_{{forloop.counter}}"
+                                {% if emailaddress.primary or user.emailaddress_set.count == 1 %}checked="checked"{% endif %}
+                            />
 
-                        {% if emailaddress.primary %}: <span class="primary">Primary</span>{% endif %}
-                    </label>
-                </div>
-            {% endfor %}
+                            {{ emailaddress.email }} -
+                            {% if emailaddress.verified %}Verified{% else %}Unverified{% endif %}
 
-                <div class="mt-3">
-                    <button
-                        type="submit"
-                        name="action_primary"
-                        class="btn btn-primary me-2 mb-2"
-                    >
-                        Make Primary
-                    </button>
-                    <button
-                        type="submit"
-                        name="action_send"
-                        class="btn btn-secondary border border-1 me-2 mb-2"
-                    >
-                        Re-send Verification
-                    </button>
-                    <button
-                        type="submit"
-                        name="action_remove"
-                        class="btn btn-danger mb-2"
-                    >
-                        Remove
-                    </button>
-                </div>
-            </fieldset>
-        </form>
-    {% else %}
-        <p>
-            <strong>Warning: </strong>You currently do not have any e-mail address set
-            up. You should really add an e-mail address so you can receive
-            notifications, reset your password, etc.
-        </p>
-    {% endif %} 
+                            {% if emailaddress.primary %}: <span class="primary">Primary</span>{% endif %}
+                        </label>
+                    </div>
+                {% endfor %}
 
-        <h3 class="my-3">Add E-mail Address</h3>
+                    <div class="mt-3">
+                        <button
+                            type="submit"
+                            name="action_primary"
+                            class="btn btn-primary me-2 mb-2"
+                        >
+                            Make Primary
+                        </button>
+                        <button
+                            type="submit"
+                            name="action_send"
+                            class="btn btn-secondary border border-1 me-2 mb-2"
+                        >
+                            Re-send Verification
+                        </button>
+                        <button
+                            type="submit"
+                            name="action_remove"
+                            class="btn btn-danger mb-2"
+                        >
+                            Remove
+                        </button>
+                    </div>
+                </fieldset>
+            </form>
+        {% else %}
+            <p>
+                <strong>Warning: </strong>You currently do not have any e-mail address set
+                up. You should really add an e-mail address so you can receive
+                notifications, reset your password, etc.
+            </p>
+        {% endif %}
 
-        <form method="post" action="">
-            {% csrf_token %}
+            <h3 class="my-3">Add E-mail Address</h3>
 
-            {{ form.as_p }}
+            <form method="post" action="">
+                {% csrf_token %}
 
-            <button 
-                type="submit" 
-                name="action_add" 
-                class="btn btn-success btn-lg mt-1"
-            >
-                Add E-mail
-            </button>
-        </form>
+                {{ form.as_p }}
+
+                <button
+                    type="submit"
+                    name="action_add"
+                    class="btn btn-success btn-lg mt-1"
+                >
+                    Add E-mail
+                </button>
+            </form>
+        </div>
     </div>
 </div>
 {% endblock content %}
