--- a/lapzone/templates/socialaccount/connections.html
+++ b/lapzone/templates/socialaccount/connections.html
@@ -5,59 +5,63 @@
 
 
 {% block content %}
-<div class="row px-3 mb-5">
-    <div class="panel-bg-color col-12 py-3 px-3">
-    {% if form.accounts %}
-        <p>
-            You can sign in to your account using 
-            any of the following third party accounts:
-        </p>
+<div class="row px-3 mb-5 d-flex justify-content-between">
+    {% include "customer/utils/_link_list_group.html" with page="connections" user=user only %}
 
-        <form method="post" action="">
-            {% csrf_token %}
+    <div class="col-lg-9 col-md-12 px-0">
+        <div id="content" class="panel-bg-color p-3 rounded">
+        {% if form.accounts %}
+            <p>
+                You can sign in to your account using
+                any of the following third party accounts:
+            </p>
 
-            <fieldset>
-            {% if form.non_field_errors %}
-                <div>{{ form.non_field_errors }}</div>
-            {% endif %}
+            <form method="post" action="">
+                {% csrf_token %}
 
-            {% for base_account in form.accounts %}
-                {% with base_account.get_provider_account as account %}
-                <div>
-                    <label for="id_account_{{ base_account.id }}">
-                    <input 
-                        type="radio" 
-                        name="account" 
-                        value="{{ base_account.id }}"
-                        id="id_account_{{ base_account.id }}" 
-                    />
-                    <span 
-                        class="{{ base_account.provider }} {{ account.get_brand.id }}"
-                    >
-                        {{account.get_brand.name}}
-                    </span>
-                    {{ account }}
-                    </label>
-                </div>
-                {% endwith %}
-            {% endfor %}
+                <fieldset>
+                {% if form.non_field_errors %}
+                    <div>{{ form.non_field_errors }}</div>
+                {% endif %}
 
-                <button type="submit" class="btn btn-danger mt-3">
-                    Remove
-                </button>
-            </fieldset>
-        </form>
+                {% for base_account in form.accounts %}
+                    {% with base_account.get_provider_account as account %}
+                    <div>
+                        <label for="id_account_{{ base_account.id }}">
+                        <input
+                            type="radio"
+                            name="account"
+                            value="{{ base_account.id }}"
+                            id="id_account_{{ base_account.id }}"
+                        />
+                        <span
+                            class="{{ base_account.provider }} {{ account.get_brand.id }}"
+                        >
+                            {{account.get_brand.name}}
+                        </span>
+                        {{ account }}
+                        </label>
+                    </div>
+                    {% endwith %}
+                {% endfor %}
 
-    {% else %}
-        <p>
-            You currently have no social network accounts connected to this account.
-        </p>
-    {% endif %}
+                    <button type="submit" class="btn btn-danger mt-3">
+                        Remove
+                    </button>
+                </fieldset>
+            </form>
 
-        <h3 class="my-3">Add a 3rd Party Account</h3>
+        {% else %}
+            <p>
+                You currently have no social network accounts connected to this account.
+            </p>
+        {% endif %}
 
-        {% include "socialaccount/snippets/provider_list.html" with process="connect" %}
-        {% include "socialaccount/snippets/login_extra.html" %}
+            <h3 class="my-3">Add a 3rd Party Account</h3>
+
+            {% include "socialaccount/snippets/provider_list.html" with process="connect" %}
+            {% include "socialaccount/snippets/login_extra.html" %}
+        </div>
     </div>
 </div>
 {% endblock content %}
