FEAT: Replace the "content" with the "advanced_content" template block

--- a/lapzone/cart/templates/cart/detail.html
+++ b/lapzone/cart/templates/cart/detail.html
@@ -4,7 +4,7 @@
 {% block content_title %}Your shopping cart{% endblock %} 
 
 
-{% block content %}
+{% block advanced_content %}
 
 {% if cart|length == 0 %}
     <div class="mb-5">
@@ -44,7 +44,7 @@
 </div>
 {% endif %} 
 
-{% endblock content %} 
+{% endblock advanced_content %}
 
 
 {% block scripts %}
