--- a/lapzone/customer/templates/customer/detail.html
+++ b/lapzone/customer/templates/customer/detail.html
@@ -22,7 +22,7 @@
 {% endblock to_right_of_content_title %} 
 
 
-{% block content %}
+{% block advanced_content %}
 <div class="row px-3 d-flex justify-content-between">
     {% include "customer/utils/_link_list_group.html" with page="details" user=user only %}
 
@@ -79,7 +79,7 @@
         </div>
     </div>
 </div>
-{% endblock content %} 
+{% endblock advanced_content %}
 
 
 {% block scripts %}
