--- a/lapzone/customer/templates/customer/wish_list.html
+++ b/lapzone/customer/templates/customer/wish_list.html
@@ -4,7 +4,7 @@
 {% block content_title %}Wish list{% endblock %}
 
 
-{% block content %}
+{% block advanced_content %}
 
 {% if not page_obj %}
 <div class="mb-5">
@@ -38,7 +38,7 @@
 </div>
 {% endif %}
 
-{% endblock content %}
+{% endblock advanced_content %}
 
 
 {% block scripts %}
