--- a/lapzone/order/templates/order/order_list.html
+++ b/lapzone/order/templates/order/order_list.html
@@ -4,7 +4,7 @@
 {% block content_title %}All your orders{% endblock %}
 
 
-{% block content %}
+{% block advanced_content %}
 
 {% if not page_obj %}
     <div class="mb-5">
@@ -85,7 +85,7 @@
 </div>
 {% endif %} 
 
-{% endblock content %} 
+{% endblock advanced_content %}
 
 
 {% block scripts %}
