--- a/lapzone/shop/templates/shop/home.html
+++ b/lapzone/shop/templates/shop/home.html
@@ -19,9 +19,9 @@
 {% endblock styles %} 
 
 
-{% block content %}
-<div class="row min-vh-100 px-3 d-flex justify-content-between">
-	<div class="min-vh-100 panel-bg-color col-12 p-0">
+{% block advanced_content %}
+<div class="row px-3">
+	<div class="panel-bg-color col-12 p-0">
 		<!-- Carousel - start -->
 		<div
 			data-bs-ride="carousel"
@@ -136,7 +136,7 @@
 		</div>
 	</div>
 </div>
-{% endblock content %} 
+{% endblock advanced_content %}
 
 
 {% block scripts %}
