--- a/lapzone/shop/templates/shop/product_detail.html
+++ b/lapzone/shop/templates/shop/product_detail.html
@@ -18,7 +18,7 @@
 {% endblock %} 
 
 
-{% block content %}
+{% block advanced_content %}
 <!-- Row with product shots and the main buttons -->
 <div class="row px-3">
 	<!-- Col with Bootstrap5 carousel with product shots -->
@@ -259,7 +259,7 @@
         {% endfor %}
 	</div>
 </div>
-{% endblock content %} 
+{% endblock advanced_content %}
 
 
 {% block scripts %}
