--- a/lapzone/shop/templates/shop/product_list.html
+++ b/lapzone/shop/templates/shop/product_list.html
@@ -39,7 +39,7 @@
 {% endblock styles %} 
 
 
-{% block content %}
+{% block advanced_content %}
 <div class="row px-3 d-flex justify-content-between">
     <!-- Sidebar with form(s) for filtering -->
     <div class="accordion col-lg-3 col-md-12 p-0">
@@ -146,7 +146,7 @@
         </div>
     </div>
 </div>
-{% endblock content %} 
+{% endblock advanced_content %}
 
 
 {% block scripts %}
