--- a/lapzone/templates/account/email.html
+++ b/lapzone/templates/account/email.html
@@ -5,7 +5,7 @@
 {% block content_title %}E-mail Addresses{% endblock %} 
 
 
-{% block content %}
+{% block advanced_content %}
 <div class="row px-3 mb-5 d-flex justify-content-between">
     {% include "customer/utils/_link_list_group.html" with page="emails" user=user only %}
 
@@ -90,7 +90,7 @@
         </div>
     </div>
 </div>
-{% endblock content %}
+{% endblock advanced_content %}
 
 
 {% block scripts %}
