--- a/lapzone/templates/account/password_reset_from_key_done.html
+++ b/lapzone/templates/account/password_reset_from_key_done.html
@@ -4,6 +4,6 @@
 {% block content_title %}Change Password{% endblock %}
 
 
-{% block content %}
+{% block advanced_content %}
     {% include 'utils/_alert.html' with message="Your password is now changed." category="warning" dismissible=False only %}
 {% endblock %}
