--- a/lapzone/templates/account/signup_closed.html
+++ b/lapzone/templates/account/signup_closed.html
@@ -4,6 +4,6 @@
 {% block content_title %}Sign Up Closed{% endblock %}
 
 
-{% block content %}
+{% block advanced_content %}
     {% include 'utils/_alert.html' with message="We are sorry, but the sign up is currently closed." category="warning" dismissible=False only %}
 {% endblock %}
