--- a/lapzone/templates/account/verification_sent.html
+++ b/lapzone/templates/account/verification_sent.html
@@ -4,7 +4,7 @@
 {% block content_title %}Verify Your E-mail Address{% endblock %}
 
 
-{% block content %}
+{% block advanced_content %}
     {% include 'utils/_alert.html' with message="We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. Please contact us if you do not receive it within a few minutes." category="primary" dismissible=False only %}
 {% endblock %}
 
