--- a/lapzone/templates/socialaccount/authentication_error.html
+++ b/lapzone/templates/socialaccount/authentication_error.html
@@ -4,6 +4,6 @@
 {% block content_title %}Social Network Login Failure{% endblock %}
 
 
-{% block content %}
+{% block advanced_content %}
     {% include 'utils/_alert.html' with message="An error occurred while attempting to login via your social network account." category="danger" dismissible=False only %}
 {% endblock %}
