--- a/lapzone/templates/account/account_inactive.html
+++ b/lapzone/templates/account/account_inactive.html
@@ -4,6 +4,6 @@
 {% block content_title %}Account Inactive{% endblock %}
 
 
-{% block content %}
+{% block advanced_content %}
     {% include 'utils/_alert.html' with message="This account is inactive." category="warning" dismissible=False only %}
 {% endblock %}
