--- a/lapzone/templates/socialaccount/login_cancelled.html
+++ b/lapzone/templates/socialaccount/login_cancelled.html
@@ -3,13 +3,13 @@
 {% block title %}Login Cancelled{% endblock %}
 
 
-{% block content %}
-<div class="alert alert-warning m-3" role="alert">
-	<h4 class="alert-heading">Login Cancelled</h4>
-	<p>
-		You decided to cancel logging in to our site using one of your existing
-		accounts. If this was a mistake, please proceed to
-		<a href="{% url 'account_login' %}">sign in</a>.
-	</p>
-</div>
-{% endblock content %}
+{% block advanced_content %}
+    <div class="alert alert-warning m-3" role="alert">
+        <h4 class="alert-heading">Login Cancelled</h4>
+        <p>
+            You decided to cancel logging in to our site using one of your existing
+            accounts. If this was a mistake, please proceed to
+            <a href="{% url 'account_login' %}">sign in</a>.
+        </p>
+    </div>
+{% endblock %}
