STYLE: Add css class "rounded" for main content blocks
where it wasn't there

--- a/lapzone/order/templates/order/order_checkout.html
+++ b/lapzone/order/templates/order/order_checkout.html
@@ -1,51 +1,58 @@
 {% extends 'cart/detail.html' %}
 
-{% block title %}Checkout{% endblock %} 
-{% block content_title %}Checkout{% endblock %} 
+{% block title %}Checkout{% endblock %}
+{% block content_title %}Checkout{% endblock %}
 
 {% block styles %}
-{{ block.super }}
+    {{ block.super }}
 
-<style>
-    .row:last-child { margin-bottom: 0!important; }
+    <style>
+        .row:last-child {
+            margin-bottom: 0 !important;
+        }
 
-    textarea { height: 150px; }
+        textarea {
+            height: 150px;
+        }
 
-    @media screen and (max-width: 576px) { /* Bootstrap5 .sm breakpoint */
-        .form-control { width: 100%!important; }
-    }
-</style>
-{% endblock styles %} 
+        @media screen and (max-width: 576px) {
+            /* Bootstrap5 .sm breakpoint */
+            .form-control {
+                width: 100% !important;
+            }
+        }
+    </style>
+{% endblock styles %}
 
 
 {% block order_create_form %}
-<div class="row px-3 mb-3">
-    <div class="panel-bg-color col-12 p-3">
-        <form action="" method="post" class="loading">
-            {% csrf_token %}
+    <div class="row px-3 mb-3">
+        <div class="panel-bg-color col-12 p-3 rounded">
+            <form action="" method="post" class="loading">
+                {% csrf_token %}
 
-            {{ form.as_p }}
+                {{ form.as_p }}
 
-            <input 
-                type="submit" 
-                value="Checkout"
-                class="loading btn btn-success btn-lg mt-3"
-            >
-        </form>
+                <input
+                        type="submit"
+                        value="Checkout"
+                        class="loading btn btn-success btn-lg mt-3"
+                >
+            </form>
+        </div>
     </div>
-</div>
-{% endblock order_create_form %} 
+{% endblock order_create_form %}
 
 
-{% block cart_buttons %}{% endblock %} 
-{% block script_to_disable_cart_btn %}{% endblock %} 
+{% block cart_buttons %}{% endblock %}
+{% block script_to_disable_cart_btn %}{% endblock %}
 
 {% block scripts %}
-{{ block.super }}
+    {{ block.super }}
 
-{% load static %}
-<script 
-    defer
-    src="{% static 'js/order/is_create_profile_switcher.js' %}" 
-></script>
+    {% load static %}
+    <script
+            defer
+            src="{% static 'js/order/is_create_profile_switcher.js' %}"
+    ></script>
 {% endblock scripts %} 
