--- a/lapzone/shop/templates/shop/home.html
+++ b/lapzone/shop/templates/shop/home.html
@@ -21,7 +21,7 @@
 
 {% block advanced_content %}
 <div class="row px-3">
-	<div class="panel-bg-color col-12 p-0">
+	<div class="panel-bg-color col-12 p-0 rounded">
 		<!-- Carousel - start -->
 		<div
 			data-bs-ride="carousel"
