--- a/lapzone/shop/templates/shop/product_list.html
+++ b/lapzone/shop/templates/shop/product_list.html
@@ -87,7 +87,7 @@
     </div>
     <!-- Block with product cards -->
     <div class="col-lg-9 col-md-12 px-0">
-        <div id="products" class="min-vh-100 row panel-bg-color px-3">
+        <div id="products" class="min-vh-100 row panel-bg-color px-3 rounded">
             <!-- Dropdown list with links for ordering -->
             <div class="dropdown mt-3 mb-2">
                 <button 
