--- a/lapzone/cart/templates/cart/detail.html
+++ b/lapzone/cart/templates/cart/detail.html
@@ -14,7 +14,7 @@
 {% block order_create_form %}{% endblock %} 
 
 <div class="row px-3 mb-5">
-    <div class="panel-bg-color col-12 p-3">
+    <div class="panel-bg-color col-12 p-3 rounded">
         {% include 'cart/utils/_product_table.html' with collection=cart app="cart" only %}
 
         <div class="d-flex justify-content-between fs-4 mt-3">
