--- a/lapzone/templates/pages/feedback.html
+++ b/lapzone/templates/pages/feedback.html
@@ -1,13 +1,13 @@
-{% extends '_base.html' %} 
+{% extends '_base.html' %}
 
-{% block title %}Feedback{% endblock %} 
+{% block title %}Feedback{% endblock %}
 {% block content_title %}Feedback page{% endblock %}
 
 
 {% block content %}
-<div class="row min-vh-100 px-3 d-flex justify-content-between">
-    <div class="min-vh-100 panel-bg-color col-12">
-        
+    <div class="row min-vh-100 px-3 d-flex justify-content-between">
+        <div class="min-vh-100 panel-bg-color col-12 rounded">
+
+        </div>
     </div>
-</div>
 {% endblock content %} 
