--- a/lapzone/static/css/general.css
+++ b/lapzone/static/css/general.css
@@ -4,44 +4,58 @@
 
     --shadow-color: var(--bs-secondary);
 
-    --bg-color: #eee;
+    --bg-color: #cccccc;
     --card-bg-color: lightgray;
-    --panel-bg-color: white;
+    --panel-bg-color: #f2f2f2;
 }
+
 :root[theme="dark"] {
     --text-color: #fafafa;
 
     --shadow-color: var(--bs-light);
 
-    --bg-color: #343a40;
-    --card-bg-color: var(--bs-dark);
-    --panel-bg-color: var(--bs-secondary);
+    --bg-color: #343541;
+    --card-bg-color: #161B22;
+    --panel-bg-color: #666666;
 }
 
-.text-color { color: var(--text-color); }
+.text-color {
+    color: var(--text-color);
+}
 
-.bg-color { background-color: var(--bg-color); }
-.panel-bg-color { background-color: var(--panel-bg-color); }
+.bg-color {
+    background-color: var(--bg-color);
+}
+
+.panel-bg-color {
+    background-color: var(--panel-bg-color);
+}
 
 /* Custom scrollbar */
-::-webkit-scrollbar { 
-    width: 15px; 
+::-webkit-scrollbar {
+    width: 15px;
     background-color: var(--bs-dark);
 }
-::-webkit-scrollbar-track { 
-    background-color: var(--bs-dark); 
+
+::-webkit-scrollbar-track {
+    background-color: var(--bs-dark);
 }
+
 ::-webkit-scrollbar-thumb {
     opacity: 0.7;
-    background: darkgray; 
+    background: darkgray;
 }
-::-webkit-scrollbar-thumb:hover { opacity: 1; }
+
+::-webkit-scrollbar-thumb:hover {
+    opacity: 1;
+}
 
 /* Theme toggler */
 #theme_toggler .checkbox {
     opacity: 0;
     position: absolute;
 }
+
 #theme_toggler .label {
     background-color: #343a40;
     border-radius: 50px;
@@ -55,6 +69,7 @@
     width: 48px;
     transform: scale(1.5);
 }
+
 #theme_toggler .label .ball {
     background-color: #fafafa;
     border-radius: 50%;
@@ -66,7 +81,10 @@
     transform: translateX(0px);
     transition: transform 0.2s linear;
 }
-#theme_toggler .checkbox:checked + .label .ball { transform: translateX(24px); }
+
+#theme_toggler .checkbox:checked + .label .ball {
+    transform: translateX(24px);
+}
 
 ion-icon[name="sunny"],
 ion-icon[name="moon"] {
@@ -77,47 +95,66 @@ ion-icon[name="moon"] {
 /* Global styles */
 html,
 body {
-	height: 100%;
-	font-size: 1.1em;
+    height: 100%;
+    font-size: 1.1em;
     scroll-behavior: smooth;
 
-	color: var(--text-color);
-	background-color: var(--bg-color);
+    color: var(--text-color);
+    background-color: var(--bg-color);
 }
 
-body, header, main, footer { transition: background 0.3s linear; }
+body, header, main, footer {
+    transition: background 0.3s linear;
+}
 
-ion-icon { font-size: 2em; }
+ion-icon {
+    font-size: 2em;
+}
 
 .content-center, .content-between {
     display: flex;
     align-items: center;
 }
-.content-center { justify-content: center; }
-.content-between { justify-content: space-between; }
 
-.disabled { cursor: not-allowed; }
+.content-center {
+    justify-content: center;
+}
 
-.opacity-1, 
-#go-to-top-btn:hover { opacity: 1; }
+.content-between {
+    justify-content: space-between;
+}
 
-a, a.text-color, #go-to-top-btn { 
-    opacity: 0.8; 
-    transition: 0.3s; 
+.disabled {
+    cursor: not-allowed;
+}
+
+.opacity-1,
+#go-to-top-btn:hover {
+    opacity: 1;
+}
+
+a, a.text-color, #go-to-top-btn {
+    opacity: 0.8;
+    transition: 0.3s;
     text-decoration: none;
     color: var(--text-color);
 }
-a:hover, a.text-color:hover { 
-    opacity: 1; 
+
+a:hover, a.text-color:hover {
+    opacity: 1;
     color: var(--text-color);
 }
 
 /* Header styles */
 
 /* Main styles */
-main { flex: 1 1 auto; }
+main {
+    flex: 1 1 auto;
+}
 
-.btn { opacity: 1; }
+.btn {
+    opacity: 1;
+}
 
 .product {
     padding: 3%;
@@ -126,7 +163,10 @@ main { flex: 1 1 auto; }
     background-color: var(--card-bg-color);
     box-shadow: 0 0 10px var(--shadow-color);
 }
-.product:hover { box-shadow: 0 0 20px var(--shadow-color); }
+
+.product:hover {
+    box-shadow: 0 0 20px var(--shadow-color);
+}
 
 #go-to-top-btn {
     border: none;
@@ -134,24 +174,37 @@ main { flex: 1 1 auto; }
     position: sticky;
     border-radius: 10px;
     margin: 30px 0 30px auto;
-    width: 50px; height: 50px;
-    right: 30px; bottom: 75px;
+    width: 50px;
+    height: 50px;
+    right: 30px;
+    bottom: 75px;
     display: none; /* Hidden by default */
 
     color: white;
     background-color: var(--bs-dark);
 }
-#go-to-top-btn ion-icon { font-size: 1.5em; }
 
-.grecaptcha-badge { bottom: 0px!important; }
+#go-to-top-btn ion-icon {
+    font-size: 1.5em;
+}
+
+.grecaptcha-badge {
+    bottom: 0px !important;
+}
 
 /* Footer styles */
 
 /* Media queries */
-@media screen and (max-width: 576px) { /* Bootstrap5 .sm breakpoint */
-    .search_form { margin-bottom: 20px; }
+@media screen and (max-width: 576px) {
+    /* Bootstrap5 .sm breakpoint */
+    .search_form {
+        margin-bottom: 20px;
+    }
 }
 
-@media screen and (max-width: 768px) { /* Bootstrap5 .md breakpoint */
-    #navbarSupportedContent { padding: 15px 0 15px 15px; }
+@media screen and (max-width: 768px) {
+    /* Bootstrap5 .md breakpoint */
+    #navbarSupportedContent {
+        padding: 15px 0 15px 15px;
+    }
 }
