--- a/lapzone/templates/_base.html
+++ b/lapzone/templates/_base.html
@@ -46,6 +46,11 @@
 			integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
 		/>
 
+        <!-- Google font "Inter" -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@200;600&display=swap">
+
 		<!-- General CSS file -->
 		<link
 			type="text/css"
